--- a/vignettes/upandrunning.Rmd
+++ b/vignettes/upandrunning.Rmd
@@ -56,9 +56,10 @@ This action will:
 
 - load the `r Biocpkg("airway")` package
 - load the count matrix and the experimental metadata
-- compose the `dds` object and compute the variance stabilizing transformed expression values (stored in the `dst` object)
-- retrieve the gene annotation information via the `r Biocpkg("org.Hs.eg.db")`, adding gene symbols to the ENSEMBL ids - this step is optional, but recommended for more human-readable identifiers to be used
+- compose the `dds` object, normalize the expression values (using the robust method proposed by Anders and Huber in the original DESeq manuscript), and compute the variance stabilizing transformed expression values (stored in the `dst` object)
+- retrieve the gene annotation information via the `r Biocpkg("org.Hs.eg.db")`, adding gene symbols to the ENSEMBL ids - this step is optional, but recommended for more human-readable identifiers to be used.
 
+If you want to load your expression data, please refer to the `r Biocpkg("iSEE", vignette="pcaExplorer.html", label="User Guide")`, which contains detailed information on the formats your data have to respect.
 
 Once the preprocessing of the input is done, you should get a notification in the lower right corner that you're all set.
 The whole preprocessing should take around 5-6 seconds (tested on a MacBook Pro, with i7 and 16 Gb RAM).
@@ -81,7 +82,7 @@ Additional features, both for samples and for features, are displayed in the **D
 A closer look at the metadata of the `airway` set highlights how each combination of cell type (`cell`) and dexamethasone treatment (`dex`) is represented by a single sequencing experiment.
 The 8 samples in the demo dataset are themselves a subsample of the [full GEO record](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE52778), namely the ones non treated with albuterol (`alb` column).
 
-The relationsship among samples can be seen in the sample-to-sample heatmap.
+The relationship among samples can be seen in the sample-to-sample heatmap.
 For example, by selecting the Manhattan distance metric, it is evident how the samples cluster by dex treatment, yet they show a dendrogram structure that recalls the 4 different cell types used.
 The total sum of counts per sample is displayed as a bar plot.
 
